# graphchatbot

./: .env.example  .gitignore  .pydeps  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  config.ini.example  graphes-config.yaml.example  pyproject.toml
.github/workflows/: ci.yaml
app/: agent.py  agents.py  config.py  conversation.py  conversation_tools.py  data.py  error_codes.py  errors.py  instructions.py  logging_config.py  main.py  new_agent.py  new_wrapper.py  nodes.py  old_schemas.py  prompt.py  prompts.py  refactor-brainstorm.md  refactor-plan.md  schemas.py  slides.md  tools.py  wrapper.py
app/___old/agent/: __init__.py  main.py
app/___old/agent/tools/: __init__.py  news.py  orgchart.py  plan.py
app/___old/agent/tools/nodes/: __init__.py  search.py  timestamps.py
app/___old/html/: index.css  index.html
app/___old/routers/: secure.py
app/___old/schemas/: __init__.py  aaaaaaaaa.py  audio.py  prediction.py  request.py  response_format.py  tools.py  web_search_options.py
app/___old/tests/: conftest.py  test_tools.py
app/agent/: __init__.py  cache.py  classify.py  cleanup.py  context.py  create.py  entry.py  hallucinations.py  main.py  old_prompt.py  orgchart.py  prompt.py
app/agent/tools/: __init__.py  deprecated_expert.py  exoset.py  integrations.py  lex.py  news.py  nodes.py  orgchart.py  plan.py
app/agent/tools/nodes/: clean.py  organisational_links.py  search.py  timestamps.py
app/auth/: __init__.py  db.py  groups.py  keys.py  main.py
app/bots/: base.py  behavior.md  format.md  general_considerations.md  main.py  prompts.py  registry.py
app/bots/admin/: admin_behavior.md  admin_bot.py  admin_format.md  bot.py  format.md
app/bots/admin/cmi/: cmi_bot.py  context.md  prompt.md  tool_description.md
app/bots/admin/cmi/cmi_restricted/: cmi_restricted_bot.py  tool_description.md
app/bots/admin/lex/: bot.py  lex_bot.py  prompt.md  tool_description.md
app/bots/admin/plasma/: context.md  plasma_bot.py  prompt.md  tool_description.md
app/bots/admin/sac/: bot.py  prompt.md  sac_bot.py  tool_description.md
app/bots/admin/servicedesk/: bot.py  prompt.md  servicedesk_bot.py  tool_description.md
app/bots/course/: bot.py  course_bot.py  course_format.md  format.md  prompt.md  retrieval_prompt.md  tool_description.md
app/bots/course/debate/: debate_bot.py  debate_pedagogy.md  early.md  ended.md  format.md  late.md  mid.md  no_case_study.md  no_position.md  prompt-debate-ended.md  prompt-early-stage-debate.md  prompt-late-stage-debate.md  prompt-mid-stage-debate.md  prompt-no-case-study.md  prompt-no-position.md
app/bots/course/debate/micro452/: course_name.md  coursebook.md  micro452_bot.py  tool_description.md
app/bots/course/direct/: bot.py  direct_bot.py  pedagogical_considerations.md
app/bots/course/direct/env342/: course_name.md  coursebook.md  env342_bot.py
app/bots/course/direct/math106e/: bot.py  course_name.md  coursebook.md  math106e_bot.py  retrieval_notes.md  tool_description.md  tool_notes.md
app/bots/course/direct/statistics/: course_name.md  coursebook.md  statistics_bot.py
app/bots/course/hinting/: bot.py  hinting_bot.py  hinting_pedagogical.md  pedagogical_considerations.md  prompt.md
app/bots/course/hinting/bioeng310/: bioeng310_bot.py  course_name.md  coursebook.md
app/bots/course/hinting/math106e/: bot.py  coursebook.md
app/bots/course/hinting/math240/: bot.py  course_name.md  coursebook.md  math240_bot.py
app/bots/course/hinting/math261/: course_name.md  coursebook.md  (+1 more)
app/bots/graph_chat/: examples.md  graph_chat_bot.py  graph_chat_tools.py  prompt.md
app/bots/graph_chat/graph_chat_tools/: __init__.py  exoset.py  news.py
app/bots/lex/: bot.py
app/bots/nodes/: classify.py  gate.py  model.py  tools.py
app/cli/: keys.py
app/deprecated/: agent_main.py  agents.py  cache.py  data.py  error_codes.py  hallucinations.py  instructions.py  main.py  nodes.py  old_schemas.py  prompt.py  tool_interactions.py  wrapper.py
app/deprecated/data/: problematic_examples.jsonl  test_examples.jsonl
app/deprecated/tools/: __init__.py  exoset.py  graph.py  instructions_prompt.py  news.py
app/exercises/: __init__.py  content.py  generate.py  prompt.py  schemas.py
app/html/: index.css  index.html  index.js
app/integrations/: BIOENG_310.py  BIO_695.py  CS_500.py  ENV_342.py  MATH_106e.py  MATH_204.py  MATH_240.py  MATH_261.py  MATH_535.py  ME_331.py  MGT_645.py  MICRO_315.py  MICRO_315_PARALLEL.py  MICRO_452.py  MICRO_452_case_studies.py  MICRO_452_tutor.py  MICRO_452_unrestricted_case_studies.py  PLASMA.py  __init__.py  abc.py  cmi.py  cmi_restricted.py  common.py  graph_chat.py  graph_chat_gpt_5.py  graph_chat_qwen.py  lex.py  lex_rcp.py  old_MICRO_452.py  plasma.py  sac.py  servicedesk.py
app/interfaces/: cache.py  db.py  es.py  graphai.py
app/llms/: __init__.py  utils.py
app/new/: agent.py  graph.py  prompt.py  wrapper.py
app/old/: wrapper.py
app/routers/: public.py  secure.py
app/schemas/: messages.py  stream_options.py
app/tools/: __init__.py  color.py  exoset.py  graph.py  news.py  nodes.py
data/: problematic_examples.jsonl  prompt_examples.jsonl  test_examples.jsonl
html/: index.css  index.html  index.js
tests/: conftest.py  test_end_to_end.py  test_main.py  test_smoke.py  test_tools.py  tools.py
(+17 files in other folders)
