[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphchatbot"
version = "0.2.0"
authors = [
  { name="Aitor Pérez", email="aitor.perez@epfl.ch" }
]
description = "GraphChatBot is an API that uses langchain to provide services leveraging LLMs in the context of the knowledge graph of the project EPFL Graph."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastapi==0.135",
    "uvicorn==0.42",
    "pydantic==2.12",
    "python-dotenv==1.2",
    "httpx==0.28",
    "pandas==3.0",
    "langchain==1.3",
    "langchain-core==1.4",
    "langchain-openai==1.2",
    "langgraph==1.2",
    "langfuse==4.6",
    "openai==2.29",
    "graphes-client @ git+https://github.com/epflgraph/graphes-client.git@search",
]

[tool.setuptools]
packages = ["app"]

[project.urls]
"Homepage" = "https://github.com/epflgraph/graphchatbot"
"Documentation" = "https://github.com/epflgraph/graphchatbot"
"Source code" = "https://github.com/epflgraph/graphchatbot"
"Bug Tracker" = "https://github.com/epflgraph/graphchatbot/issues"
