[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "graphchatbot"
version = "2.0.0"
authors = [
  { name="Aitor Pérez", email="aitor.perez@epfl.ch" },
  { name="Spiros Chalkias", email="spyridon.chalkias@epfl.ch" }
]
description = "FastAPI backend for the EPFL Graph and CEDE chatbots: a modular framework to build and serve educational tutors, the EPFL Graph chatbot and other administrative RAG assistants."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.135",
    "uvicorn==0.42",
    "pydantic==2.12",
    "python-dotenv==1.2",
    "httpx==0.28",
    "pandas==3.0",
    "langchain==1.3",
    "langchain-core==1.4",
    "langchain-openai==1.2",
    "langgraph==1.2",
    "langfuse==4.14.1",
    "openai==2.29",
    "graphes-client @ git+https://github.com/epflgraph/graphes-client.git@search",
]

[dependency-groups]
dev = [
    "ruff==0.15.22",
    "coverage==7.15.2",
    "pre-commit==4.6.0",
]

[tool.ruff]
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # Ban inline imports
    "PLC0415",
]
ignore = [
    # E501: line length handled by the formatter
    "E501",
]
exclude = ["*.pyi"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true

[project.urls]
"Homepage" = "https://github.com/epflgraph/graphchatbot"
"Documentation" = "https://github.com/epflgraph/graphchatbot#readme"
"Source code" = "https://github.com/epflgraph/graphchatbot"
"Bug Tracker" = "https://github.com/epflgraph/graphchatbot/issues"
"Changelog" = "https://github.com/epflgraph/graphchatbot/blob/main/CHANGELOG.md"